--- a/src/app/hero-form/hero-form.component.html
+++ b/src/app/hero-form/hero-form.component.html
@@ -29,7 +29,7 @@
         />
       </div>
 
-      <div class="form-group ng-valid">
+      <div class="form-group">
         <label for="email">Email</label>
         <input
           type="email"
@@ -39,6 +39,9 @@
           name="email"
           #email="ngModel"
         />
+        <div [hidden]="email.valid || email.pristine" class="alert alert-danger" >
+         Valid Email is required
+        </div>
       </div>
 
       <div class="form-group">
